fixed header navigation mobile position

--- a/src/components/layout/Header/header.scss
+++ b/src/components/layout/Header/header.scss
@@ -1,3 +1,14 @@
+@keyframes showNavigation {
+	0% {
+		opacity: 0;
+		visibility: visible;
+	}
+	100% {
+		opacity: 1;
+		visibility: visible;
+	}
+}
+
 .cls-1 {
 	font-size: 78.5px;
 }
@@ -23,20 +34,10 @@
 	position: relative;
 	width: 100%;
 	height: 62px;
-	// display: flex;
-	// flex-direction: row;
-	// align-items: center;
-	// justify-content: space-between;
 	display: grid;
 	grid-template-columns: 180px 1fr 180px;
 	align-items: center;
 	background-color: #141414;
-	// .header-wrapper {
-	// 	display: flex;
-	// 	gap: 50px;
-	// 	align-items: center;
-	// 	height: 100%;
-	// 	padding-left: 20px;
 
 	.header-nav-list {
 		height: 62px;
@@ -74,7 +75,6 @@
 				}
 			}
 		}
-		// }
 	}
 	.header-genres-menu {
 		position: absolute;
@@ -110,8 +110,23 @@
 @media (width<750px) {
 	.header {
 		grid-template-columns: 160px 1fr 160px;
+		z-index: 9999;
 	}
-	nav {
-		display: none;
+	.navigation {
+		position: absolute;
+		top: 62px;
+		left: 0;
+		background-color: #141414;
+		z-index: 999;
+		width: 100%;
+		opacity: 0;
+		visibility: hidden;
+		&.active-nav {
+			animation: showNavigation 0.5s forwards;
+		}
+	}
+	.header-nav-list {
+		display: flex;
+		justify-content: center;
 	}
 }
